bugfix: popup video feature z-index

--- a/public/scss/models/effects/_popUpVideo.scss
+++ b/public/scss/models/effects/_popUpVideo.scss
@@ -5,7 +5,7 @@
 	right: 0;
 	bottom: 0;
 	background-color: rgba(28, 30, 32, .98);
-	z-index: 1100;
+	z-index: 4000;
 	display: none;
 }
 
